@@ -560,6 +560,7 @@ void domap(const char* name)
     int exits_count = 0;
     int exits_allocated = 0;
     object* floor;
+    char tmppath[MAX_BUF];
 
     char* exits_text;
 
@@ -629,7 +630,8 @@ void domap(const char* name)
     if (force_pics)
         needpic = 1;
     else if (generate_pics) {
-        stat(create_pathname(name), &stats);
+        create_pathname(name, tmppath, MAX_BUF);
+        stat(tmppath, &stats);
         if (stat(mappicpath, &statspic) || (statspic.st_mtime < stats.st_mtime))
             needpic = 1;
         else if (stat(mapsmallpicpath, &statspic) || (statspic.st_mtime < stats.st_mtime))
@@ -649,7 +651,8 @@ void domap(const char* name)
         if ( m->tile_path[x] != NULL ) {
             memset(exit_path, 0, 500);
             strncpy(exit_path, path_combine_and_normalize(m->path, m->tile_path[x]), 500);
-            if (stat(create_pathname(exit_path), &stats)) {
+            create_pathname(exit_path, tmppath, MAX_BUF);
+            if (stat(tmppath, &stats)) {
                 printf("  map %s doesn't exist in map %s, for tile %d.\n", exit_path, name, x);
             }
             else
@@ -701,7 +704,8 @@ void domap(const char* name)
 
                     if (strlen(ep)) {
                         strncpy(exit_path, path_combine_and_normalize(m->path, ep), 500);
-                        if (stat(create_pathname(exit_path), &stats)) {
+                        create_pathname(exit_path, tmppath, MAX_BUF);
+                        if (stat(tmppath, &stats)) {
                             printf("  map %s doesn't exist in map %s, at %d, %d.\n", ep, name, item->x, item->y);
                         }
                         else
