@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Remove static buffer from create_pathname().
+ common/map.c
+ include/libproto.h
+ server/plugins.c server.c
+ utils/mapper.c
+---
 Remove static buffer from create_overlay_pathname().
  common/map.c
  include/libproto.h
